crates/core/dep-graph/tests/snapshots/dep_graph_test__run_target__isolates_interactive_tasks.snap
---
source: crates/core/dep-graph/tests/dep_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="InstallNodeDeps(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SyncNodeProject(interactive)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunInteractiveTarget(interactive:one)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncNodeProject(chain)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunTarget(chain:c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="RunTarget(chain:d)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="RunTarget(chain:e)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="RunTarget(chain:f)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    10 [ label="RunInteractiveTarget(interactive:two)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    11 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    12 [ label="RunTarget(basic:lint)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    13 [ label="RunInteractiveTarget(interactive:depOnOne)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
    5 -> 1 [ arrowhead=box, arrowtail=box]
    6 -> 2 [ arrowhead=box, arrowtail=box]
    6 -> 5 [ arrowhead=box, arrowtail=box]
    7 -> 2 [ arrowhead=box, arrowtail=box]
    7 -> 5 [ arrowhead=box, arrowtail=box]
    8 -> 2 [ arrowhead=box, arrowtail=box]
    8 -> 5 [ arrowhead=box, arrowtail=box]
    9 -> 2 [ arrowhead=box, arrowtail=box]
    9 -> 5 [ arrowhead=box, arrowtail=box]
    8 -> 9 [ arrowhead=box, arrowtail=box]
    7 -> 8 [ arrowhead=box, arrowtail=box]
    6 -> 7 [ arrowhead=box, arrowtail=box]
    10 -> 2 [ arrowhead=box, arrowtail=box]
    10 -> 3 [ arrowhead=box, arrowtail=box]
    11 -> 1 [ arrowhead=box, arrowtail=box]
    12 -> 2 [ arrowhead=box, arrowtail=box]
    12 -> 11 [ arrowhead=box, arrowtail=box]
    13 -> 2 [ arrowhead=box, arrowtail=box]
    13 -> 3 [ arrowhead=box, arrowtail=box]
    13 -> 4 [ arrowhead=box, arrowtail=box]
}

