crates/core/dep-graph/tests/snapshots/dep_graph_test__run_target__moves_persistent_tasks_last.snap
---
source: crates/core/dep-graph/tests/dep_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="InstallNodeDeps(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SyncNodeProject(persistent)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunPersistentTarget(persistent:dev)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="RunPersistentTarget(persistent:devMiddleman)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunPersistentTarget(persistent:local)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="SyncNodeProject(buildA)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="SyncNodeProject(buildC)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    10 [ label="SyncNodeProject(noTasks)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    11 [ label="RunTarget(buildA:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    12 [ label="RunTarget(basic:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    13 [ label="RunTarget(buildC:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    14 [ label="RunPersistentTarget(persistent:persistent)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
    5 -> 2 [ arrowhead=box, arrowtail=box]
    5 -> 3 [ arrowhead=box, arrowtail=box]
    6 -> 2 [ arrowhead=box, arrowtail=box]
    6 -> 3 [ arrowhead=box, arrowtail=box]
    7 -> 1 [ arrowhead=box, arrowtail=box]
    8 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 8 [ arrowhead=box, arrowtail=box]
    9 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 9 [ arrowhead=box, arrowtail=box]
    10 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 10 [ arrowhead=box, arrowtail=box]
    11 -> 2 [ arrowhead=box, arrowtail=box]
    11 -> 7 [ arrowhead=box, arrowtail=box]
    12 -> 2 [ arrowhead=box, arrowtail=box]
    12 -> 9 [ arrowhead=box, arrowtail=box]
    13 -> 2 [ arrowhead=box, arrowtail=box]
    13 -> 8 [ arrowhead=box, arrowtail=box]
    11 -> 12 [ arrowhead=box, arrowtail=box]
    11 -> 13 [ arrowhead=box, arrowtail=box]
    6 -> 11 [ arrowhead=box, arrowtail=box]
    5 -> 6 [ arrowhead=box, arrowtail=box]
    14 -> 2 [ arrowhead=box, arrowtail=box]
    14 -> 3 [ arrowhead=box, arrowtail=box]
    4 -> 5 [ arrowhead=box, arrowtail=box]
    4 -> 14 [ arrowhead=box, arrowtail=box]
    4 -> 13 [ arrowhead=box, arrowtail=box]
}

